# ChaosEngineAI

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FUNCTIONS_README.md  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  build.ps1  build.sh  chaos_readme.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
backend_service/: __init__.py  agent.py  app.py  ddtree.py  image_runtime.py  inference.py  longlive_engine.py  longlive_installer.py  mlx_video_runtime.py  mlx_video_wan_convert.py  mlx_video_wan_installer.py  mlx_worker.py  model_resolution.py  progress.py  reasoning_split.py  runaway_guard.py  runtime_paths.py  sdcpp_image_runtime.py  sdcpp_video_runtime.py  state.py  task_datasets.py  video_runtime.py  vllm_engine.py
backend_service/cache_strategies/: __init__.py  megakernel.py  native.py  rotorquant.py  triattention.py  turboquant.py
backend_service/catalog/: __init__.py  capabilities.py  image_models.py  text_models.py  video_models.py
backend_service/helpers/: __init__.py  attention_backend.py  cache.py  chat_template.py  discovery.py  documents.py  finetuning.py  formatting.py  gpu.py  huggingface.py  images.py  memory_gate.py  network.py  perf.py  persistence.py  platform_filter.py  preview_vae.py  prompts.py  remote_providers.py  settings.py  system.py  thermal.py  video.py  workspaces.py
backend_service/mcp/: __init__.py  client.py  loader.py  tool_adapter.py
backend_service/models/: __init__.py
backend_service/plugins/: __init__.py
backend_service/rag/: __init__.py  embedding_client.py  vector_store.py
backend_service/routes/: __init__.py  auth.py  benchmarks.py  cache.py  chat.py  compare.py  diagnostics.py  finetuning.py  health.py  images.py  metrics.py  models.py  openai_compat.py  plugins.py  prompts.py  server.py  settings.py  setup.py  storage.py  video.py  workspaces.py
backend_service/services/: __init__.py  download_service.py  log_service.py  settings_service.py
backend_service/tools/: __init__.py  calculator.py  code_executor.py  file_reader.py  web_search.py
cache_compression/: __init__.py  chaosengine.py  fastercache.py  firstblockcache.py  magcache.py  native.py  pab.py  rotorquant.py  taylorseer.py  teacache.py  triattention.py  turboquant.py
cache_compression/_teacache_patches/: __init__.py  cogvideox.py  flux.py  hunyuan_video.py  ltx_video.py  mochi.py
compression/: __init__.py  chaosengine.py  native.py  rotorquant.py  triattention.py  turboquant.py
desktop/: RELEASE.md  index.html  package-lock.json  package.json
desktop/scripts/: release-macos.mjs  stage-runtime.mjs
desktop/src/: App.tsx  api.test.ts  api.ts  mockData.ts  styles.css  types.ts
desktop/src-tauri/: build.rs  tauri.conf.json
dflash/: __init__.py
docs/: image-discover-next-level.md  image-generation-mvp.md  provenance-audit.md
scripts/: build-llama-turbo.sh  build-sdcpp.sh  capture-screenshots.sh  generate-updater-manifest.mjs  inference-test-runner.py  install-longlive.sh  kill-dev.sh  load-env.mjs  patch-tauri-conf.mjs  pre-build-check.sh  publish-artifacts.mjs  release-macos.mjs  smoke-image-runtime.py  spike_triattention_mlx.py  stage-runtime.mjs  update-llama-cpp.sh  update-llama-turbo.sh  update-sdcpp.sh
src/: App.tsx  api.test.ts  api.ts  defaults.ts  mockData.ts  styles.css  types.ts  updater.ts
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: ChaosEngineAI.entitlements
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  main.rs
src/__tests__/: streamPhase.test.ts
src/components/: AcceptedTokenOverlay.tsx  BenchmarkGauge.tsx  BenchmarkScatter.tsx  ChatPerfStrip.tsx  CitationBadge.tsx  CodeBlock.tsx  GPUCard.tsx  ImageGenerationModal.tsx  ImageOutputCard.tsx  InfoTooltip.tsx  InstallLogPanel.tsx  KvStrategyChip.tsx  LatestImageDiscoverCard.tsx  LaunchModal.tsx  LiveProgress.tsx  LogprobSummary.tsx  ModelActionIcons.tsx  ModelLaunchModal.tsx  ModelLoadingProgress.tsx  ModelPicker.tsx  Panel.tsx  PerformancePreview.tsx  ProgressRow.tsx  PromptPhaseIndicator.tsx  ReasoningPanel.tsx  RichMarkdown.tsx  RuntimeControls.tsx  SamplerPanel.tsx  Sidebar.tsx  SliderField.tsx  StartupProgressPanel.tsx  StatCard.tsx  SubstrateRoutingBadge.tsx  SubtabBar.tsx  TemperatureChip.tsx  ToolCallCard.tsx  VideoGenerationModal.tsx  WanInstallPanel.tsx  kvStrategyFilter.ts  runtimeSupport.ts
src/constants/: benchmarks.ts  capabilities.ts  image.ts  index.ts  sidebarGroups.ts  tabs.ts
src/hooks/: index.ts  useBenchmarks.ts  useChat.ts  useGenerationProgress.ts  useGpuStatus.ts  useImageState.ts  useModels.ts  useServerLog.ts  useSettings.ts  useSidebarPrefs.ts  useVideoState.ts  useWorkspace.ts
src/types/: chat.ts  image.ts  index.ts  video.ts
src/utils/: cache.ts  capabilities.ts  chat.ts  chatRuntime.ts  discoverSort.ts  downloads.ts  format.ts  images.ts  index.ts  keyboard.ts  library.ts  models.ts  runtime.ts  (+1 more)
tests/: inference-batch-dflash-comparison.json  inference-batch-strategies.json  test_add_message_variant.py  test_agent.py  test_backend_service.py  test_cache_strategies.py  test_capabilities.py  test_chat_template.py  test_ddtree_spans.py  test_delve_message.py  test_dflash.py  test_diagnostics_routes.py  test_discovery.py  test_documents.py  test_extras_path.py  test_fork_session.py  test_gpu.py  test_gpu_detection.py  test_history_with_reasoning.py  test_image_discover.py  test_image_runtime.py  test_inference.py  test_library_cache_persistence.py  test_llama_chat_template_fix.py  test_logprobs_request.py  test_longlive_engine.py  test_longlive_installer.py  test_mcp_client.py  test_memory_gate.py  test_mlx_logprobs_extract.py  test_mlx_video.py  test_mlx_video_wan_convert.py  test_mlx_video_wan_installer.py  test_mlx_worker.py  test_mmproj_vision.py  test_one_turn_override.py  test_perf_telemetry.py  test_platform_filter.py  test_plugins.py  test_preview_vae.py  (+19 more)
turboquant_mlx/: __init__.py
(+71 files in other folders)
