[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "chaosengine-ai"
version = "0.7.2"
description = "Local AI model runner with pluggable cache/compression strategies"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chaosengine-api = "backend_service.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
mlx-lm = [
    "mlx>=0.22.0",
    "gguf>=0.18.0",
    "mlx-lm>=0.22.0",
]
triattention = ["triattention @ git+https://github.com/WeianMao/triattention.git", "vllm>=0.8.0"]
triattention-mlx = ["triattention @ git+https://github.com/WeianMao/triattention.git", "mlx-lm>=0.22.0"]
rotorquant = ["turboquant>=0.2.0"]
turboquant = ["turboquant-mlx-full>=0.1.3"]
vllm = ["vllm>=0.8.0"]
dflash-mlx = ["dflash-mlx @ git+https://github.com/bstnxbt/dflash-mlx.git@f825ffb268e50d531e8b6524413b0847334a14dd"]
dflash = ["dflash>=0.1.0"]
desktop = [
    "fastapi>=0.115.0",
    "huggingface-hub>=0.26.0",
    "pypdf>=6.10.2",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
images = [
    "accelerate>=0.34.0",
    "diffusers>=0.30.0",
    "huggingface-hub>=0.26.0",
    "pillow>=10.4.0",
    "safetensors>=0.4.5",
    "torch>=2.4.0",
]
# Diffusion cache acceleration. The TeaCache strategy scaffold ships in
# cache_compression/ without a runtime dependency; upstream ali-vilab/TeaCache
# is distributed as a repo of per-model patches, not a pip package, so we
# vendor the ``teacache_forward`` functions into cache_compression/_teacache_patches/
# under Apache 2.0 as each model lands (FLUX, Wan2.1 first — see FU-007).
# This extra exists so the Setup page can pin the minimum diffusers version
# known to work with our vendored patches without bumping the core ``images``
# extra that non-diffusion installs pull in.
diffusion-accel = [
    "diffusers>=0.30.0",
]
# Apple Silicon MLX video runtime (Blaizzy/mlx-video) — MIT. Covers Wan2.1
# (1.3B/14B), Wan2.2 (T2V-14B, TI2V-5B, I2V-14B), LTX-2 (19B) with T2V, I2V,
# and A2V. The engine is a subprocess wrapper (like mflux for image), so the
# dependency is only pulled in when the user opts into the Mac-native video
# path on Apple Silicon (FU-009).
mlx-video = ["mlx-video"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.setuptools.packages.find]
include = ["backend_service*", "cache_compression*", "dflash*", "turboquant_mlx*"]
