[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "chaosengine-ai"
version = "0.7.4"
description = "Local AI model runner with pluggable cache/compression strategies"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
chaosengine-api = "backend_service.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
mlx-lm = [
    "mlx>=0.22.0",
    "gguf>=0.18.0",
    "mlx-lm>=0.22.0",
]
# Apple Silicon vision-language runtime (Blaizzy/mlx-vlm). Loads
# multimodal MLX models like Gemma 4, Qwen2.5-VL, LLaVA, etc. and
# routes images + audio through the matching processors. Wired in
# ``backend_service/mlx_worker.py`` via ``is_multimodal_family``
# detection — the worker swaps from mlx_lm.load → mlx_vlm.load when
# a multimodal repo prefix is hit. Pulls mlx + transformers + Pillow
# transitively; ~150 MB extra in the venv.
mlx-vlm = [
    "mlx-vlm>=0.4.0",
]
triattention = ["triattention @ git+https://github.com/WeianMao/triattention.git", "vllm>=0.8.0"]
triattention-mlx = ["triattention @ git+https://github.com/WeianMao/triattention.git", "mlx-lm>=0.22.0"]
rotorquant = ["turboquant>=0.2.0"]
turboquant = ["turboquant-mlx-full>=0.3.0"]
vllm = ["vllm>=0.8.0"]
dflash-mlx = ["dflash-mlx @ git+https://github.com/bstnxbt/dflash-mlx.git@f825ffb268e50d531e8b6524413b0847334a14dd"]
dflash = ["dflash>=0.1.0"]
desktop = [
    "fastapi>=0.115.0",
    "huggingface-hub>=0.26.0",
    "pypdf>=6.10.2",
    "psutil>=5.9.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
images = [
    "accelerate>=0.34.0",
    "diffusers>=0.38.0",
    "huggingface-hub>=0.26.0",
    "pillow>=10.4.0",
    "safetensors>=0.4.5",
    "torch>=2.4.0",
]
# Diffusion cache acceleration. Multiple strategies live here:
#   1. TeaCache (vendored per-model forwards under cache_compression/
#      _teacache_patches/ — FLUX, HunyuanVideo, LTX-Video, CogVideoX, Mochi).
#   2. First Block Cache (FU-015) — diffusers 0.36+ ships
#      ``apply_first_block_cache`` as a model-agnostic hook, so it covers
#      every DiT (FLUX, SD3, Wan, HunyuanVideo, LTX, CogVideoX, Mochi)
#      without per-model vendoring. Obsoletes the original FU-007 Wan
#      TeaCache port.
#   3. TaylorSeer / MagCache / PyramidAttentionBroadcast / FasterCache
#      (post-FU-026) — all four configs ship in diffusers 0.38 core and
#      attach via ``pipeline.transformer.enable_cache(config)``. No extra
#      pip dep beyond diffusers.
# Pin diffusers >=0.38 so the full cache-hooks set is available.
diffusion-accel = [
    "diffusers>=0.38.0",
]
# Apple Silicon MLX video runtime (Blaizzy/mlx-video) — MIT. Covers Wan2.1
# (1.3B/14B), Wan2.2 (T2V-14B, TI2V-5B, I2V-14B), LTX-2 (19B) with T2V, I2V,
# and A2V. The engine is a subprocess wrapper (like mflux for image), so the
# dependency is only pulled in when the user opts into the Mac-native video
# path on Apple Silicon (FU-009).
#
# IMPORTANT: install from GIT, not PyPI. PyPI's ``mlx-video==0.1.0`` is an
# unrelated 0.1.0 utilities package (just ``load``/``normalize``/``resize``/
# ``to_float``) — does NOT ship the LTX-2 / Wan / HunyuanVideo generation
# entrypoints we wrap. Blaizzy's repo lives only on GitHub; pin by branch so
# new model entries (Wan2.2-Distill, LTX-2.3, etc.) land without needing a
# PyPI release every time.
mlx-video = ["mlx-video @ git+https://github.com/Blaizzy/mlx-video.git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.setuptools.packages.find]
include = ["backend_service*", "cache_compression*", "dflash*", "turboquant_mlx*"]
