[package]
name = "chaosengineai"
version = "0.4.23"
description = "ChaosEngineAI desktop shell for local AI model inference"
authors = ["OpenAI Codex"]
edition = "2021"

[[bin]]
name = "ChaosEngineAI"
path = "src/main.rs"

[lib]
name = "chaosengineai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
